fix: add needed upstream env variables (#7)
* fix: add needed upstream env variables

* Add quotes env variable

* Update README